--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </p>
 
     <div class="mt-4 d-flex gap-3 justify-content-center flex-wrap">
-      <a href="https://wa.me/569XXXXXXXX" class="btn btn-main">
+      <a href="https://wa.me/56935947869" class="btn btn-main">
         🚀 Solicitar demo
       </a>
       <a href="#features" class="btn btn-outline-light">
@@ -138,7 +138,7 @@
       Ideal para restaurantes, almacenes y delivery local.
     </p>
 
-    <a href="https://wa.me/569XXXXXXXX" class="btn btn-main btn-lg">
+    <a href="https://wa.me/56935947869" class="btn btn-main btn-lg">
       💬 Hablar ahora
     </a>
   </div>
