Change hero background gradient colors

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       min-height: 100vh;
       display: flex;
       align-items: center;
-      background: radial-gradient(circle at top, #1b1b1b, #000);
+      background: radial-gradient(circle at top, #000, #000);
     }
 
     .hero img {
